add new class to article and table
